vcluster_versioned_docs/version-0.37.0/configure/vcluster-yaml/sleep.mdx
---
title: Auto Sleep
sidebar_label: sleep
sidebar_position: 7
sidebar_class_name: pro host-nodes
description: Learn how to configure and manage auto sleep feature in tenant clusters, with or without a platform agent.
---
import ProAdmonition from '../../_partials/admonitions/pro-admonition.mdx'
import Sleep from '../../_partials/config/sleep.mdx'
import SleepDeploymentExample from '../../_fragments/sleep-deployment-example.mdx'
import SleepIngressExample from '../../_fragments/sleep-ingress-example.mdx'
import SleepIstioExample from '../../_fragments/sleep-istio-example.mdx'
import BasePrerequisites from '@site/docs/_partials/base-prerequisites.mdx';
import InstallCli from '../../_partials/deploy/install-cli.mdx';
import TenancySupport from '../../_fragments/tenancy-support.mdx';
import Button from "@site/src/components/Button";
import Expander from "@site/src/components/Expander";
import Label from "@site/src/components/Label";
import Input from "@site/src/components/Input";
import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="vcp-distro-sleep-mode" />

<TenancySupport hostNodes="true" />

<ProAdmonition />

Not all workloads need to run continuously. Scaling them down reduces costs. With auto sleep, you can scale workloads based on a set schedule, user activity, ingress traffic, or Gateway API HTTP traffic when the selected Gateway controller supports request mirroring.

:::warning
Auto sleep is intended for pre-production use cases only, and has limitations when used on a tenant cluster instance not connected to the platform.
:::

## Configure

<Tabs
  defaultValue="yaml"
  values={[
    { label: "vcluster.yaml", value: "yaml" },
    { label: "vCluster CLI", value: "cli" },
    { label: "Platform UI", value: "ui" },
    { label: "Custom Resource", value: "crds" },
  ]}
>
<TabItem value="yaml">

### Enable auto sleep

To enable auto sleep, add the following configuration to your `vcluster.yaml`:

```yaml title="Sleep configuration"
sleep:
  auto:
    afterInactivity: 1h
```

### Deployment example

A deployment resource in Kubernetes manages a set of identical pods. Configuring auto sleep for a deployment scales down the pods while keeping the control plane active.
This setup allows the tenant cluster to reduce resource usage while still being able to monitor activity and trigger wake-up actions when needed.

:::note Control plane behavior
- **Without agent**: The control plane remains active, allowing the tenant cluster instance to monitor activity and wake up automatically.
- **With agent**: The platform agent can shut down the control plane completely for maximum resource savings.
:::

<details>
<summary>Configure auto sleep with a deployment resource</summary>
<SleepDeploymentExample />
</details>

### Ingress controller example

An ingress controller, such as NGINX, manages external HTTP/S traffic to services in a Kubernetes cluster.
To configure auto sleep for the ingress controller, make sure it stays responsive to incoming traffic and can wake up the cluster if needed. This setup keeps the ingress controller active, even when the tenant cluster instance is in auto sleep and allows the controller to handle requests that trigger the tenant cluster to wake up.

<details>
<summary>Configure auto sleep with an ingress resource</summary>
<SleepIngressExample />
</details>

### Istio gateway example

:::note
Enable Istio integration for auto sleep to work with Istio resources.
:::

When Istio is installed on the control plane cluster and the [Istio integration](./integrations/istio.mdx) is enabled, the tenant cluster instance syncs [Gateway](https://istio.io/latest/docs/reference/config/networking/gateway/) and [VirtualService](https://istio.io/latest/docs/reference/config/networking/virtual-service/) resources to the control plane cluster.

With auto sleep enabled, any traffic routed to a Service in the tenant cluster instance is tracked as activity and keeps the tenant cluster instance awake. If the vCluster is asleep, incoming traffic wakes it up.

<details>
  <summary>Configure an ingress gateway for cluster external access</summary>
  <SleepIstioExample />
</details>

### Gateway API HTTPRoute activity detection {#gateway-api-httproute-activity-detection}

Gateway-backed auto sleep for HTTP traffic depends on `HTTPRoute` request mirroring support. Platform uses a managed request mirror rule to observe traffic and update activity for the sleeping tenant cluster.

A Gateway controller can support `HTTPRoute` traffic without supporting request mirroring. In that case, Gateway endpoints can still be usable, but automatic wakeup from HTTP traffic is not available through that controller.

If a controller supports request mirroring but does not advertise it in `GatewayClass` status, set the `sleepmode.loft.sh/request-mirror-controller-allowlist` annotation on the Platform `Cluster` resource with the controller names that should be treated as request-mirror-capable.

If Gateway API CRDs are installed on a Control Plane Cluster after vCluster Platform is already running, restart Platform. This runs CRD discovery again and starts the Gateway API sleep-mode controllers:

```bash title="Restart vCluster Platform"
kubectl rollout restart deployment/loft -n vcluster-platform
```

If your Platform deployment or namespace differs, adjust the command.

For the broader adoption path, see [Gateway API](../../key-features/gateway-api.mdx) and [Migrate from ingress-nginx to Gateway API](../../manage/ingress-nginx-to-gateway-api.mdx).

### Enable auto sleep with label selectors and schedules {#enable-sleep-with-label-selectors-and-schedules}

Use label selectors and schedules to configure auto sleep based on inactivity or specific timing:

<details>
<summary>Auto sleep label selectors and schedule</summary>

```yaml title="Sleep after 3 hours of inactivity, anything that does not have the label dont=sleep"
sleep:
  auto:
    afterInactivity: 3h  # Uses Go duration with a max unit of hour
    exclude:
      selector:
        labels:
          dont: sleep
```

```yaml title="Sleep every Friday at 17:30 and wake every Monday at 7:00 in Mountain timezone"
sleep:
  auto:
    timezone: America/Denver
    schedule: 30 17 * * 5
    wakeup:
      schedule: 0 7 * * 1
```
</details>


</TabItem>

<TabItem value="ui">

### Manual sleep

<Flow id="sleep-manual-ui">
  <Step>
    Click on <NavStep>Virtual Clusters</NavStep> to find the tenant cluster that you want to put to sleep.
  </Step>
  <Step>
    Hover over the row of the tenant cluster that you want to put to sleep.
  </Step>
  <Step>
    Click on the vertical ellipsis button and select <Label>Sleep</Label> to put the tenant cluster to sleep.
  </Step>
  <Step>
    Notice how the <Label>Status</Label> column shows that the tenant cluster is now sleeping.
  </Step>
</Flow>

:::info Automatic Wakeup
Note that the tenant cluster will automatically wake up again, once you run a kubectl command or send a Kubernetes request via another tool to the tenant cluster.
:::

### Configure auto sleep

:::info Manual Support only
This only works for tenant clusters without a template, if you want to change the auto sleep configuration for a tenant cluster created by a template, it must be configured in the template.
:::

<Flow id="sleep-automatic-ui">
  <Step>
    Click on <NavStep>Virtual Clusters</NavStep> to find the tenant cluster that you want to configure auto sleep for.
  </Step>
  <Step>
    Hover over the row of the tenant cluster that you want to configure.
  </Step>
  <Step>
    Click on <Label>Edit</Label> on the tenant cluster that you want to edit.
  </Step>
  <Step>
    Use the <Label>Sleep After Inactivity (minutes)</Label> field to specify the time to wait before putting the tenant cluster to sleep if there is no more user activity in this tenant cluster.
  </Step>
  <Step>
    Click on the <Button>Save</Button> button to save the changes.
  </Step>
</Flow>

### Configure scheduled auto sleep and wake-up

:::info Manual Support only
This only works for tenant clusters without a template, if you want to change the auto sleep configuration for a tenant cluster created by a template, it must be configured in the template.
:::

<Flow id="sleep-automatic-constraint-schedule-ui">
  <Step>
    In the <NavStep>Virtual Clusters</NavStep> view, hover over the tenant cluster that you want to configure auto sleep for.
  </Step>
  <Step>
    Click on the <Button>Edit</Button> button.
  </Step>
  <Step>
    In the <Label>Definition</Label> section, under the <Label>Sleep Mode</Label> section, use the <Label>Sleep Schedule</Label> field and/or the <Label>Wake-Up Schedule</Label> field to specify the <Input>Cronjob Times</Input> when the respective tenant cluster should be put to sleep or woken up.
  </Step>
  <Step>
    <b>[Optional]</b> Input a <Label>Schedule Timezone</Label> for the timezone to apply the schedule.
  </Step>
  <Step>
    Click on the <Button>Save</Button> button to save the changes.
  </Step>
</Flow>

### Wake up tenant cluster

<Flow id="wakeup-manual-ui">
  <Step>
    In the <NavStep>Virtual Clusters</NavStep> view, hover over the tenant cluster that you want to wake up.
  </Step>
  <Step>
    Click on the vertical ellipsis button and select <Label>Wake Up</Label> to wake up the tenant cluster.
  </Step>
  <Step>
    Notice how the <Label>Status</Label> column shows that the tenant cluster is now running again after a <Label>Pending</Label> state.
  </Step>
</Flow>

### Configure auto-delete

The platform lets you configure auto-delete for tenant clusters that have not been used for a certain period of time.

:::tip Manual Support only
This only works for tenant clusters without a template, if you want to change the auto sleep configuration for a tenant cluster created by a template, it must be configured in the template.
:::

<Flow id="auto-delete-ui">
  <Step>
    In the <NavStep>Virtual Clusters</NavStep> view, hover over the tenant cluster that you want to configure auto-delete for.
  </Step>
  <Step>
    Click on the <Button>Edit</Button> button.
  </Step>
  <Step>
    Under the <Label>Sleep Mode</Label> section, use the <Label>Delete After Inactivity (minutes)</Label> field to specify the time to wait before deleting the tenant cluster if there was no more user activity within this tenant cluster.
  </Step>
  <Step>
    Click on the <Button>Save</Button> button to save the changes.
  </Step>
</Flow>

</TabItem>

<TabItem value="crds">

You can configure auto sleep for a tenant cluster by setting the sleep configuration in the VirtualClusterInstance manifest.

```yaml {8-11}
apiVersion: management.loft.sh/v1
kind: VirtualClusterInstance
metadata:
  name: my-vcluster
  namespace: loft-p-my-project
spec:
  clusterRef:
    cluster: my-connected-cluster
  sleepModeConfig:
    afterInactivity: 3600  # seconds
    autoDelete:
      afterInactivity: 86400  # seconds
  templateRef:
    name: my-vcluster-template
```

For scheduled sleep and wake-up, you can use the `sleepSchedule` and `wakeupSchedule` fields:

```yaml {9-11}
apiVersion: management.loft.sh/v1
kind: VirtualClusterInstance
metadata:
  name: my-vcluster
  namespace: loft-p-my-project
spec:
  clusterRef:
    cluster: my-connected-cluster
  sleepModeConfig:
    sleepSchedule: "30 17 * * 5"  # Sleep every Friday at 17:30
    wakeupSchedule: "0 7 * * 1"   # Wake every Monday at 7:00
    timezone: America/Denver
  templateRef:
    name: my-vcluster-template
```

</TabItem>

<TabItem value="cli">

### Pause a tenant cluster (Helm driver)

For tenant clusters deployed with the Helm driver (without platform):

```bash
vcluster pause VCLUSTER_NAME --namespace NAMESPACE
```

This will scale down the tenant cluster and delete all workloads created through the tenant cluster. Upon resume, all workloads will be recreated. Other resources such as persistent volume claims, services etc. will not be affected.

### Resume a paused tenant cluster

```bash
vcluster resume VCLUSTER_NAME --namespace NAMESPACE
```

### Sleep a tenant cluster (Platform)

For tenant clusters managed by the vCluster Platform:

```bash
vcluster platform sleep vcluster VCLUSTER_NAME --project PROJECT_NAME
```

You can optionally prevent the tenant cluster from waking up for a certain period:

```bash
vcluster platform sleep vcluster VCLUSTER_NAME --project PROJECT_NAME --prevent-wakeup 3600
```

The `--prevent-wakeup` flag specifies the number of seconds the tenant cluster should remain asleep (use 0 for infinite sleeping).

### Wake up a sleeping tenant cluster (Platform)

```bash
vcluster platform wakeup vcluster VCLUSTER_NAME --project PROJECT_NAME
```

:::info Automatic Wakeup
Note that the tenant cluster will automatically wake up again, once you run a kubectl command or send a Kubernetes request via another tool to the tenant cluster.
:::

</TabItem>

</Tabs>


## Config reference

<Sleep />
